<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="btn_search">Search</string>
    <string name="etSearchQueryPrompt">Enter search query</string>
    <string name="tv_image_title">Image Title</string>
    <string name="im_content_description">Default Image</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tv_advanced_search_options">Advanced Search Options</string>
    <string name="tv_image_size">Image Size</string>
    <string name="prompt_image_size">Select…</string> <!--  &hellip; doesn't work, why? -->
    <string name="hint_select">Select…</string>
    <string name="tv_color_filter">Color Filter</string>
    <string name="tv_type_filter">Image Type</string>
    <string name="bt_submit">Submit</string>
    <string name="tv_site_filter">Site Filter</string>
    <string name="hint_site_filter">site</string>
    <string name="ivImageDisplayContentDescription">action picture</string>

</resources>
